# Terminal_App_Launcher

./: CMakeLists.txt  GUI.c  README.md  TUI.c  apps.c  interface.c  launcher.conf  launcher_example.conf  main.c  parser.c
